--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -5,12 +5,10 @@
           android:title="Home"
           android:icon="@drawable/ic_baseline_home_24"/>
     <item android:id="@+id/add"
-        android:title="Add"
-        android:icon="@drawable/ic_baseline_add_24"/>
+        android:title="review"
+        android:icon="@drawable/ic_baseline_remove_red_eye_24"/>
     <item android:id="@+id/graph"
-        android:title="Graph"
-        android:icon="@drawable/ic_baseline_graph_24"/>
-    <item android:id="@+id/update"
-        android:title="Update"
-        android:icon="@drawable/ic_baseline_update_24"/>
+        android:title="order"
+        android:icon="@drawable/order"/>
+
 </menu>
