--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -42,6 +42,7 @@
         android:layout_marginBottom="20dp"
         android:textSize="30dp"
         android:layout_centerHorizontal="true"
+        android:visibility="invisible"
         />
 
     <!--    <EditText-->
@@ -61,6 +62,7 @@
         android:layout_marginBottom="20dp"
         android:text="Generate OTP"
         android:textSize="30dp"
+        android:visibility="visible"
 
         />
 
@@ -98,7 +100,7 @@
         android:layout_marginBottom="20dp"
         android:textSize="30dp"
         android:layout_centerHorizontal="true"
-        android:visibility="invisible"
+        android:visibility="visible"
         />
 
 
@@ -106,18 +108,17 @@
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/text"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="20dp"
         android:background="#30ffffff"
+        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
         android:drawablePadding="20dp"
         android:hint="full name"
         android:padding="20dp"
-        android:layout_below="@+id/text"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
-        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
-        android:visibility="invisible"
-        />
+        android:visibility="invisible" />
     <!--        android:drawableLeft="@drawable/ic_baseline_person_outline_24"-->
 
 
@@ -126,34 +127,36 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
+        android:layout_below="@+id/text"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:background="#30ffffff"
+        android:drawableLeft="@drawable/ic_baseline_phone_24"
         android:drawablePadding="20dp"
         android:hint="phone"
         android:inputType="phone"
         android:padding="20dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
-        android:drawableLeft="@drawable/ic_baseline_phone_24"
-        android:layout_below="@+id/text"
-        />
+        android:visibility="visible" />
     <!--        android:visibility="invisible"/>-->
 
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/signupbtn"
-        android:layout_width="140dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/radiogender"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="137dp"
-        android:layout_marginTop="22dp"
-        android:layout_marginEnd="134dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="286dp"
+        android:layout_marginEnd="130dp"
+        android:layout_marginBottom="19dp"
         android:backgroundTint="@color/design_default_color_secondary"
-        android:text="continue"
-        android:visibility="invisible"/>
+        android:text="Signup"
+        android:visibility="visible" />
 
     <RadioGroup
         android:id="@+id/radiogender"
@@ -163,7 +166,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        android:visibility="invisible">
+        android:visibility="visible">
 
         <RadioButton
             android:id="@+id/male"
@@ -171,7 +174,8 @@
             android:layout_height="64dp"
             android:text="male"
             android:textColor="@color/white"
-            android:textSize="25sp" />
+            android:textSize="25sp"
+            android:visibility="invisible" />
         <!--            android:visibility="invisible"-->
 
         <RadioButton
@@ -180,7 +184,8 @@
             android:layout_height="64dp"
             android:text="female"
             android:textColor="@color/white"
-            android:textSize="25sp" />
+            android:textSize="25sp"
+            android:visibility="invisible" />
         <!--            android:visibility="invisible"-->
     </RadioGroup>
 
@@ -195,22 +200,22 @@
         android:text="date of barth:"
         android:textColor="@color/white"
         android:textSize="25dp"
-        android:visibility="invisible"/>
+        android:visibility="invisible" />
     <!--        android:visibility="invisible"/>-->
 
     <TextView
-        android:id="@+id/genrashin"
+        android:id="@+id/gender"
         android:layout_width="wrap_content"
         android:layout_height="44dp"
         android:layout_below="@+id/phone"
         android:layout_alignParentEnd="true"
 
-        android:layout_marginEnd="20dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
         android:text="Select a gender:"
         android:textColor="@color/white"
         android:textSize="25dp"
-        android:visibility="invisible"/>
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/birth"
@@ -223,7 +228,7 @@
         android:text="select date"
         android:textColor="@color/white"
         android:textSize="25dp"
-        android:visibility="invisible"/>
+        android:visibility="invisible" />
     <!--        android:visibility="invisible"-->
 
 </RelativeLayout>
