--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -150,13 +150,13 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="140dp"
-        android:layout_marginTop="286dp"
-        android:layout_marginEnd="130dp"
-        android:layout_marginBottom="19dp"
+        android:layout_marginStart="124dp"
+        android:layout_marginTop="284dp"
+        android:layout_marginEnd="146dp"
+        android:layout_marginBottom="21dp"
         android:backgroundTint="@color/design_default_color_secondary"
         android:text="Signup"
-        android:visibility="visible" />
+        android:visibility="invisible" />
 
     <RadioGroup
         android:id="@+id/radiogender"
@@ -231,4 +231,41 @@
         android:visibility="invisible" />
     <!--        android:visibility="invisible"-->
 
+    <Button
+        android:id="@+id/selectImageButton"
+        android:layout_width="122dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="130dp"
+        android:layout_marginTop="108dp"
+        android:layout_marginEnd="159dp"
+        android:layout_marginBottom="93dp"
+        android:text="select"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/firebaseImage" />
+
+    <ImageView
+        android:id="@+id/firebaseImage"
+        android:layout_width="202dp"
+        android:layout_height="194dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="89dp"
+        android:layout_marginTop="369dp"
+        android:layout_marginEnd="120dp"
+        android:layout_marginBottom="168dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:srcCompat="@tools:sample/avatars" />
 </RelativeLayout>
