--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,4 +3,95 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeFragment"/>
+    tools:context=".HomeFragment">
+
+
+    <RadioGroup
+        android:id="@+id/rgBtnGroup"
+        android:layout_width="260dp"
+        android:layout_height="68dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="77dp"
+        android:layout_marginBottom="375dp"
+        android:background="@drawable/radio_group_backgorund"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/rbMale"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/radio_button_bg"
+            android:button="@null"
+            android:checked="true"
+            android:gravity="center"
+            android:text="Male"
+            android:textColor="@drawable/button_text_checked_color"
+            android:textSize="22sp"
+            android:textStyle="bold" />
+
+        <RadioButton
+            android:id="@+id/rbFemale"
+            android:layout_width="match_parent"
+            android:layout_height="63dp"
+            android:layout_weight="1"
+            android:background="@drawable/radio_button_bg"
+            android:button="@null"
+            android:checked="false"
+            android:gravity="center"
+            android:text="female"
+            android:textColor="@drawable/button_text_checked_color"
+            android:textSize="22sp"
+            android:textStyle="bold" />
+    </RadioGroup>
+
+    <RadioGroup
+        android:id="@+id/rgBtnGroup2"
+        android:layout_width="274dp"
+        android:layout_height="79dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="77dp"
+        android:layout_marginBottom="200dp"
+        android:background="@drawable/radio_group_backgorund"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/rbYourloc"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/radio_button_bg"
+            android:button="@null"
+            android:checked="true"
+            android:gravity="center"
+            android:text="Your loc"
+            android:textColor="@drawable/button_text_checked_color"
+            android:textSize="22sp"
+            android:textStyle="bold" />
+
+        <RadioButton
+            android:id="@+id/rbAnotherloc"
+            android:layout_width="match_parent"
+            android:layout_height="63dp"
+            android:layout_weight="1"
+            android:background="@drawable/radio_button_bg"
+            android:button="@null"
+            android:checked="false"
+            android:gravity="center"
+            android:text="Another loc"
+            android:textColor="@drawable/button_text_checked_color"
+            android:textSize="22sp"
+            android:textStyle="bold" />
+    </RadioGroup>
+
+    <TextView
+        android:id="@+id/address"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:text="address:  "
+        android:textSize="30sp"
+        android:layout_marginBottom="144dp" />
+</RelativeLayout>
